xiongnu tree 2 done (first pass)

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
  xiongnu_missions_2: "Expansion of the Xiongnu"
- xiongnu_missions_2_DESCRIPTION: "Mission description"
+ xiongnu_missions_2_DESCRIPTION: "Historically, the Xiongnu would unite around Modun in the later 3rd century BC after his coup against his father Touman Luandi, immediately setting forth to exact vengeance on the Yuezhi, and then absorbing dozens of tribes speaking as many languages into the Xiongnu Confederation. To the west, south and east, the Xiongnu would gobble up all opposition, and redirect the might of the entire Eastern Steppe unto the lands of the Middle Kingdom, successfully vassalizing the Han dynasty by the 2nd century BC. The time has come to relive this history and expand upon it."
  xiongnu_missions_2_CRITERIA_DESCRIPTION: "This mission will be completed when the Xiongnu have struck out in all directions to create a vast steppe empire."
  xiongnu_missions_2_BUTTON_TOOLTIP: "The world has only just begun to feel the might of Xiongnu horse and iron!"
 
@@ -65,7 +65,7 @@
  xiongnu_missions_2_task_19_DESC: "The vast riches of Tarim Basin oasis cities are now within our grasp - their desert fortresses will not be able to hold out forever against the might of the Chanyu's hordes of Asia. The plunder of the great cities of the Silk Road will fill the wallets of our tribesmen, and that of the Chanyu."
 
  xiongnu_missions_2_task_20: "Thrust into Jin"
- xiongnu_missions_2_task_20_DESC: "Peoples with strange bronze knives and speaking unheard languages lay in a hilly peninsula to the south of out eastern-most holdings. It is time for the Chanyu to bring these strange peoples to their knees, exacting tribute and subjugation on the peoples of this peninsula and acquiring their bronze treasures."
+ xiongnu_missions_2_task_20_DESC: "Peoples with strange bronze knives and speaking unheard languages lay in a hilly peninsula to the south of our eastern-most holdings. It is time for the Chanyu to bring these odd peoples to their knees, exacting tribute and subjugation on the inhabitants of this peninsula and acquiring their bronze treasures."
 
  xiongnu_missions_2_task_21: "From West to East"
  xiongnu_missions_2_task_21_DESC: "The greatness of our empire stretches so far from west to east that we can hardly even conceive its borders. We must maintain control over every corner of our empire by ensuring the loyalty of the various governors of the foreign districts."
@@ -92,17 +92,17 @@
  me_xiongnu_2_4.a: "The Hu are no match for us."
 
  me_xiongnu_2_5_title: "$xiongnu_missions_2_task_5$"
- me_xiongnu_2_5_desc: ""
- me_xiongnu_2_5.a: ""
- me_xiongnu_2_5.b: ""
- me_xiongnu_2_5.c: ""
+ me_xiongnu_2_5_desc: "The Scytho-Rong tribes of Shanma stood no match for our greater numbers and smarter tactics. The Chanyu rode to battle nonetheless, as focused as his first ride to battle, slaying hardened steppe-warriors with sword and bow. Their pitiful resistance was quashed, the tribesmen feasted, and yet another nation was absorbed into the growing confederacy. The Chanyu would not be content, and continued to gaze east at the dawning sky each morning, marching toward China."
+ me_xiongnu_2_5.a: "The Region of You looks promising..."
+ me_xiongnu_2_5.b: "We must secure the Bing Region!"
+ me_xiongnu_2_5.c: "Yong has the best potential for plunder."
 
  me_xiongnu_2_6_title: "$xiongnu_missions_2_task_6$"
  me_xiongnu_2_6_desc: "Laoshang, an up and coming star among the military and political leadership of our vast empire, dare to challenge our rule! Word has reached our ears that he has the backing of at least some contigent of the army and council. The Chanyu rode forth without delay, eager to silence any critics, and challenge this ambitious upstart to single combat. Laoshang could hear the thundering hooves in the distance and rode forth to meet his lord. As they met, the Chanyu, with his lavish bronze and iron sword, swung deep toward his foe, cleaving his head completely off. The Chanyu's horse was stabbed and fell to the ground, knocking the Great Chanyu to the dirt. When he arose, the entire camp hailed and chanted the name of Modun, putting all pretense of challenge to his rule to bed."
  me_xiongnu_2_6.a: "The other clan leaders will fear and obey."
 
  me_xiongnu_2_7_title: "$xiongnu_missions_2_task_7$"
- me_xiongnu_2_7_desc: "The tribes along Lake Balhash proved no match for the might of the Xiongnu. Their vast grasslands along the lake now are within the domain of our Chanyu, and yet more clans of the steppe swear fealty to him. These tribesmen interestingly speak of great riches far to the south and west, and even claim that some portions of our old nemesis, the Yuezhi, have fled south of here to seek refuge in these fabled lands. Perhaps it is time for us strike out further..."
+ me_xiongnu_2_7_desc: "The tribes along Lake Balkash proved no match for the might of the Xiongnu. Their vast grasslands along the lake now are within the domain of our Chanyu, and yet more clans of the steppe swear fealty to him. These tribesmen interestingly speak of great riches far to the south and west, and even claim that some portions of our old nemesis, the Yuezhi, have fled south of here to seek refuge in these fabled lands. Perhaps it is time for us strike out further..."
  me_xiongnu_2_7.a: "The vast Western Steppe now lay open."
 
  me_xiongnu_2_8_title: "$xiongnu_missions_2_task_8$"
@@ -134,40 +134,40 @@
  me_xiongnu_2_14.a: "This is but out first step into China..."
 
  me_xiongnu_2_15_title: "$xiongnu_missions_2_task_15$"
- me_xiongnu_2_15_desc: ""
+ me_xiongnu_2_15_desc: "The harsh forests and taiga of the Tungusic lands caused enormous attrition to the Xiongnu horsemen, on top of the ferocious guerilla tactics of these peoples. The Chanyu would not tolerate anything but full submissions from these rats, and ordered the decimation of entire villages and pillaging of anything of value. Only once they accept their new masters would the Chanyu be able to fully utilize the vast natural resources of this new land, and extract tribute from these already impoverished souls."
  me_xiongnu_2_15.a: "Let us make better use of these new lands..."
 
  me_xiongnu_2_16_title: "$xiongnu_missions_2_task_16$"
- me_xiongnu_2_16_desc: ""
+ me_xiongnu_2_16_desc: "The various kings and dukes of the Middle Kingdom have finally taken notice of us, and bring offers of wine and women. The royal courts of China claim these women to be of royal ancestry from their various states, each one worthy to serve as concubines of the Chanyu, and more noblewomen for the consituent tribal leaders of our vast and diverse realm. With time, the Chinese concubine would become the favorite of the Chanyu."
  me_xiongnu_2_16.a: "The Chanyu loves nothing more than beautiful women..."
 
  me_xiongnu_2_17_title: "$xiongnu_missions_2_task_17$"
- me_xiongnu_2_17_desc: ""
+ me_xiongnu_2_17_desc: "As the Xiongnu conquered more lands from the Chinese and brought their artisans to court, a caste of engineers from some of the conquered cities had brought with them a myriad of plans and ideas to fashion the unorganized tent-city known as Longcheng into a proper imperial capital. A grand imperial palace blending steppe and Chinese architecture emerged in the planning documents, as well as a redesigned trade quarter and equine grounds. The Chanyu immediately approved their glorious vision, and provided unlimited funds for the endeavor which happened obtained mostly from the slain kinsmen of the engineers."
  me_xiongnu_2_17.a: "Longcheng is a city fit for our royal court!"
 
  me_xiongnu_2_18_title: "$xiongnu_missions_2_task_18$"
- me_xiongnu_2_18_desc: ""
+ me_xiongnu_2_18_desc: "The annoying tribes to our west were delusional to believe they could ever match the might of the Xiongnu hordes. The fledgling hope of any confederation to fight us east of the great Ural Mountains has vanished, and the Chanyu seeks rumours of the fabled rich lands to the far west. One Arimaspian tradesman brought with him proof of the vast western riches - an ornate pot depicting a God of Lightning, coins bearing the face of a warrior-king named Iskender, and purple robes exacted as tribute from their royalty. Some of the artifacts bear a resemblance to those found in Tarim Basin cities, and the Chanyu believed the fabled lands of the west to be a true place. The allure of the west would remain with the Chanyu, but China still lay before him."
  me_xiongnu_2_18.a: "Our Steppe Empire extends ever-westward."
 
  me_xiongnu_2_19_title: "$xiongnu_missions_2_task_19$"
- me_xiongnu_2_19_desc: ""
+ me_xiongnu_2_19_desc: "One by one the cities of the surrounding the Taklamakan Desert fell to the armies of the Xiongnu in brutal sieges - Kuche, Cadota, Yutian and even the impregnable Kashgar all fell to the mighty Chanyu, with the help of Chinese engineers and sappers of course. The baffled denizens of those towns had never seen such tactics, and would regret not surrendering peacefully to the Chanyu, as many thousands died or were enslaved during the plundering of their cities. The wealth from some of these cities even rivaled those of the Chinese, especially great Kuche and their jades. "
  me_xiongnu_2_19.a: "The Tarim city-states have new masters."
 
  me_xiongnu_2_20_title: "$xiongnu_missions_2_task_20$"
- me_xiongnu_2_20_desc: ""
+ me_xiongnu_2_20_desc: "The Chanyu was pleased to see the collection of odd bronze knives laid before his feet - the spoils of his latest successful campaign against yet another unfortunate tribe. The Chanyu commanded the metalworkers of the tribes to join his court under the direction of some of the Xiongnu smiths. They would be allowed to maintain the culture traditions of their forefathers, but for the desire of the Chanyu and his increasingly sophisticated tastes. Perhaps we can find more metalsworkers in this mysterious peninsula?"
  me_xiongnu_2_20.a: "We must look further south..."
 
  me_xiongnu_2_21_title: "$xiongnu_missions_2_task_21$"
- me_xiongnu_2_21_desc: ""
+ me_xiongnu_2_21_desc: "Through bribery, promises, friendship, marriage, and any other manner of cajoling, the Chanyu has been able to ensure his grip on this vast realm. The personal relationships he has built with each and every advisor, governor and great tribal family eases the Chanyu's mind, for he cannot charge forth in the heat of battle with doubts of the loyalties of those left to guard his hard-won spoils. It is much easier to fight the enemy in front of you knowing there are none behind you."
  me_xiongnu_2_21.a: "Our grasp on the outer realms remains firm."
  
  me_xiongnu_2_22_title: "$xiongnu_missions_2_task_22$"
- me_xiongnu_2_22_desc: ""
- me_xiongnu_2_22.a: "All of Korean has now submitted to the Chanyu."
+ me_xiongnu_2_22_desc: "The enigmatic peninsula of the Jin has been fully subdued my lord! The last of the petty lords has submitted his full surrender to our armies, and promises of tribute are rolling in from around the countryside. Even the island of Tamna has bent the knee, for they fear that we will fashion great boats to ride our horses through the waves to strike their city. The Chanyu thought this to be joke in his mind, but in all seriousness in the court, conveyed to the emissaries from the island that this indeed would be the case if they were to ever betray him."
+ me_xiongnu_2_22.a: "All of Korea has now submitted to the Chanyu."
  
  me_xiongnu_2_90_title: "Expansion of the Xiongnu"
- me_xiongnu_2_90_desc: ""
- me_xiongnu_2_90.a: ""
+ me_xiongnu_2_90_desc: "With the greatest steppe leader of the millenium, Chanyu Modun, now in charge of the mighty Xiongnu Confederation, the time has come to strike fear into the hearts of those who would oppose us in every direction. Horse riding nations to our south, east and west, continue to oppose our growing authority, while the rich lands of the Middle Kingdom lay just beyond. We must not rest until we absorb the lesser nations into our superior confederation, and claim the real prize in the splenderous lands of China."
+ me_xiongnu_2_90.a: "No one is safe from the grasp of the Xiongnu."
  
  #Tooltips
  xiongnu_missions_2_task_6_modun_dead: "Modun has died."
@@ -207,15 +207,15 @@
  xiongnu_02_final_mod: "Steppe Dominance"
  xiongnu_sanctuary_mod: "Central Sanctuary"
  city_of_chanyu: "City of the Chanyu"
- desc_xiongnu_desert_mod: "TODO"
- desc_xiongnu_speed_run: "TODO"
+ desc_xiongnu_desert_mod: "Our horses and men have learned the ways of the desert."
+ desc_xiongnu_speed_run: "Our governors remain loyal through the political aptitude of the Chanyu..."
  desc_xiongnu_speed_run_reward: "$desc_xiongnu_speed_run$"
- desc_xiongnu_02_final_mod: "TODO"
- desc_xiongnu_sanctuary_mod: "TODO"
- desc_city_of_chanyu: "TODO"
+ desc_xiongnu_02_final_mod: "We can rely on the loyalty of the various nobles in our confederation."
+ desc_xiongnu_sanctuary_mod: "The holy sanctuaries of Longcheng compel men to adopt our ways."
+ desc_city_of_chanyu: "This city enjoys the splendor brought to it by the Great Chanyu of the Xiongnu."
  
  #Treasures
  xiongnu_golden_horse: "Xiongnu Golden Horse"
- xiongnu_golden_horse_desc: "TODO"
+ xiongnu_golden_horse_desc: "A golden horse dedicated to the fallen steed of the Great Chanyu Modun. It was created by Chinese metalworkers brought as slaves to the Xiongnu court."
  xiongnu_crown: "Crown of a Chanyu"
- xiongnu_crown_desc: "TODO"
+ xiongnu_crown_desc: "A wondrous golden crown, bearing motifs of animals such as the stag and wolf, are combined with the artistic brilliance of Chinese goldsmiths. This headpiece of the steppe-king is a one-of-a-kind treasure, striking awe and fear in all who see it atop the head of a man on horseback."
