Martial Lifestyle event chain

--- a/localization/english/events/FMO_CFT_event_chains_l_english.yml
+++ b/localization/english/events/FMO_CFT_event_chains_l_english.yml
@@ -176,65 +176,65 @@
 ##############################################################################################################################################################
 # Military - Raiders of the Lost Ark
 ##############################################################################################################################################################
- lifestyle_event_chains.36.t: "TODO"
- lifestyle_event_chains.36.desc: "TODO"
- lifestyle_event_chains.36.a: "TODO"
- lifestyle_event_chains.36.b: "TODO"
- lifestyle_event_chains.36.c: "TODO"
+ lifestyle_event_chains.36.t: "Ancient Treasure"
+ lifestyle_event_chains.36.desc: "A rumor has spread through the streets of [ROOT.GetCountry.GetCapital.GetName], carried on the whispers of eager locals and curious visitors alike. Apparently an old fisherman stumbled upon a long forgotten cave while seeking shelter from a storm. Illuminated only by the feeble light of his torch, he claimed to have glimpsed the glint of precious metals and the sparkle of gemstones hidden within the shadows. Supposedly these invaluable goods were overflowing from a stone chest lying just out of reach."
+ lifestyle_event_chains.36.a: "We shall send someone to investigate the matter."
+ lifestyle_event_chains.36.b: "I will find this treasure; I just need to train first."
+ lifestyle_event_chains.36.c: "What use is a fisherman's tale?"
  
- lifestyle_event_chains.37.t: "TODO"
- lifestyle_event_chains.37.desc: "TODO"
- lifestyle_event_chains.37.a: "TODO"
- lifestyle_event_chains.37.b: "TODO"
+ lifestyle_event_chains.37.t: "Ancient Treasure: Trainer"
+ lifestyle_event_chains.37.desc: "After hearing the rumors of a vast treasure horde lying just outside of [ROOT.GetCountry.GetCapital.GetName], a fervor for martial excellence has seized [ROOT.GetCountry.GetRuler.GetName], desiring to cast aside their #E frailty#! in preparation for retrieving the lost treasure [ROOT.GetCountry.GetRuler.GetHerHim]self. [ROOT.GetCountry.GetRuler.GetName] decided to embark on an intensive training regimen, but must now decide whether to train under [finesse_thinker.GetName], whose fitness is unquestioned, or under [martial_thinker.GetName], widely regarded as one of the greatest warriors of [martial_thinker.GetHisHer] generation."
+ lifestyle_event_chains.37.a: "I'll train with [finesse_thinker.GetName]."
+ lifestyle_event_chains.37.b: "[martial_thinker.GetName], is the right [martial_thinker.GetWomanMan] for the job."
  
- lifestyle_event_chains.38.t: "TODO"
- lifestyle_event_chains.38.desc: "TODO"
- lifestyle_event_chains.38.a: "TODO"
+ lifestyle_event_chains.38.t: "Ancient Treasure: Training"
+ lifestyle_event_chains.38.desc: "[ROOT.GetCountry.GetRuler.GetName] has embarked on an intensive training regimen under the guidance of [finesse_thinker.GetName]. Every morning, [ROOT.GetCountry.GetRuler.GetName] can be found on the training grounds, clad in armor and wielding weapons with unwavering determination. [ROOT.GetCountry.GetRuler.GetPraenomen] is almost ready to pursue the fisherman's rumor and seize the hidden cave's treasure for [ROOT.GetCountry.GetRuler.GetHerHim]self."
+ lifestyle_event_chains.38.a: "[ROOT.GetCountry.GetRuler.GetPraenomen] has gone from #E frail#! to #E formidable#!."
  
- lifestyle_event_chains.39.t: "TODO"
- lifestyle_event_chains.39.desc: "TODO"
- lifestyle_event_chains.39.a: "TODO"
+ lifestyle_event_chains.39.t: "Ancient Treasure: Training"
+ lifestyle_event_chains.39.desc: "[ROOT.GetCountry.GetRuler.GetName] has embarked on an intensive training regimen under the guidance of [martial_thinker.GetName]. Every morning, [ROOT.GetCountry.GetRuler.GetName] can be found on the training grounds, clad in armor and wielding weapons with unwavering determination. [ROOT.GetCountry.GetRuler.GetPraenomen] is almost ready to pursue the fisherman's rumor and seize the hidden cave's treasure for [ROOT.GetCountry.GetRuler.GetHerHim]self."
+ lifestyle_event_chains.39.a: "[ROOT.GetCountry.GetRuler.GetPraenomen] has gone from #E frail#! to #E formidable#!."
  
- lifestyle_event_chains.40.t: "TODO"
- lifestyle_event_chains.40.desc: "TODO"
- lifestyle_event_chains.40.a: "TODO"
- lifestyle_event_chains.40.b: "TODO"
+ lifestyle_event_chains.40.t: "Ancient Treasure: Map"
+ lifestyle_event_chains.40.desc: "A breathless messenger, clad in dusty garments and bearing an air of urgency, arrives at the court of [ROOT.GetCountry.GetRuler.GetPraenomen]. Clutched tightly in their hand is a weathered parchment, stained with the traces of a journey fraught with peril. As [ROOT.GetCountry.GetRuler.GetPraenomen] examines the parchment, mention of distinctive landmarks, ancient symbols, and celestial alignments intertwines to form a map of sorts, seeming to guide the way to the hidden entrance of the cave."
+ lifestyle_event_chains.40.a: "Soon I will retrieve the treasure!"
+ lifestyle_event_chains.40.b: "This seems like a lot of work."
 
- lifestyle_event_chains.41.t: "TODO"
- lifestyle_event_chains.41.desc: "TODO"
- lifestyle_event_chains.41.a: "TODO"
- lifestyle_event_chains.41.b: "TODO"
+ lifestyle_event_chains.41.t: "Ancient Treasure: Hidden Cave"
+ lifestyle_event_chains.41.desc: "Under the protective cloak of the night, [ROOT.GetCountry.GetRuler.GetPraenomen] and a small party of aids arrive at the location hinted at by the mysterious clues. The air is thick with anticipation as they stand before the entrance of the fabled cave, shrouded in darkness and foreboding. The mouth of the cave yawns wide, casting an impenetrable shadow that seems to consume the feeble light of their torches. The wind whistles through the rocky crevices, creating an eerie symphony that resonates within the depths of the cavern. The very atmosphere seems to pulse with an otherworldly energy, setting a disquieting tone for the expedition."
+ lifestyle_event_chains.41.a: "Into the breach!"
+ lifestyle_event_chains.41.b: "No one would blame me for turning back."
 
- lifestyle_event_chains.42.t: "TODO"
- lifestyle_event_chains.42.desc: "TODO"
- lifestyle_event_chains.42.a: "TODO"
- lifestyle_event_chains.42.b: "TODO"
+ lifestyle_event_chains.42.t: "Ancient Treasure: Yawning Maw"
+ lifestyle_event_chains.42.desc: "As [ROOT.GetCountry.GetRuler.GetPraenomen] and the party venture deeper into the cave, the narrow passageways reveal unsettling carvings on the walls. Symbols of unknown origin and cryptic inscriptions suggest a history steeped in mystery, with hints of ancient rituals and forgotten civilizations. The air becomes heavy with a palpable tension, and an unnerving silence descends, broken only by the echoing footsteps of the explorers. Glistening stalactites and stalagmites cast eerie shadows that dance along the cavern walls, playing tricks on the mind. The deeper they go, the more the cave seems to close in around them, its subterranean secrets unfolding like a dark tapestry. Water droplets echo in the distance, creating an ominous rhythm that reverberates through the chamber. As [ROOT.GetCountry.GetRuler.GetPraenomen] presses on, [ROOT.GetCountry.GetRuler.GetSheHe] comes upon a vast chamber that seems to extend into the yawning maw of the abyss."
+ lifestyle_event_chains.42.a: "We shall venture further still."
+ lifestyle_event_chains.42.b: "No one would blame me for turning back."
 
- lifestyle_event_chains.43.t: "TODO"
- lifestyle_event_chains.43.desc: "TODO"
- lifestyle_event_chains.43.a: "TODO"
- lifestyle_event_chains.43.b: "TODO"
+ lifestyle_event_chains.43.t: "Ancient Treasure: Crossroads"
+ lifestyle_event_chains.43.desc: "[ROOT.GetCountry.GetRuler.GetPraenomen] and [ROOT.GetCountry.GetRuler.GetHerHis] servants find themselves standing at a critical juncture within the heart of the mysterious cave. Before them, the passageway splits into two, each tunnel disappearing into the darkness, leaving only a trail of uncertainty and the distant echoes of dripping water.\n\nTo the left, a narrow corridor winds its way deeper into the cave, the shadows playing tricks on the eyes. Faint whispers seem to beckon from that direction, as if promising secrets yet to be unveiled. The air becomes colder, and a subtle, ethereal glow emanates from the depths, offering an eerie allure.\n\nTo the right, the passageway widens, revealing a series of intricate carvings on the walls. Ancient symbols tell tales of forgotten civilizations, and the echoes of distant water suggest the possibility of an underground river or chamber. Yet, the darkness appears more impenetrable, and the foreboding silence seems to linger in the depths."
+ lifestyle_event_chains.43.a: "We shall go left."
+ lifestyle_event_chains.43.b: "Right is always right."
 
- lifestyle_event_chains.44.t: "TODO"
- lifestyle_event_chains.44.desc: "TODO"
- lifestyle_event_chains.44.a: "TODO"
+ lifestyle_event_chains.44.t: "Ancient Treasure: Collapse"
+ lifestyle_event_chains.44.desc: "Suddenly, the path takes an unexpected turn, leading [ROOT.GetCountry.GetRuler.GetPraenomen] and [ROOT.GetCountry.GetRuler.GetHerHis] servants to an exit bathed in the feeble light of a crescent moon. The explorers emerge into an open cavern, greeted by the cool night air and the soft rustling of the surrounding wilderness. However, their momentary relief is shattered as a deafening roar echoes from the cavern's mouth, reverberating through the subterranean chamber. The ground beneath their feet trembles as rocks and debris cascade down, sealing the entrance they had just passed through. The cave has collapsed, trapping them outside with no means of return. In the chaotic aftermath, a stalactite, shaken loose by the collapsing cavern, plummets from above, grazing [ROOT.GetCountry.GetRuler.GetPraenomen]'s thigh, leaving a deep and painful gash. As [ROOT.GetCountry.GetRuler.GetPraenomen]'s servants tends to their wounded [ROOT.GetCountry.GetRuler.GetRulerTitle], the extent of the injury becomes apparent. The wound, while not life-threatening, requires immediate attention."
+ lifestyle_event_chains.44.a: "We must return to [ROOT.GetCountry.GetCapital.GetName] at once!"
 
- lifestyle_event_chains.45.t: "TODO"
- lifestyle_event_chains.45.desc: "TODO"
- lifestyle_event_chains.45.a: "TODO"
- lifestyle_event_chains.45.b: "TODO"
+ lifestyle_event_chains.45.t: "Ancient Treasure: Chest"
+ lifestyle_event_chains.45.desc: "Suddenly, the path takes an unexpected turn, leading [ROOT.GetCountry.GetRuler.GetPraenomen] and [ROOT.GetCountry.GetRuler.GetHerHis] servants to a vast chamber. In the center of the cavern, bathed in an eerie ambient glow, stands a massive stone chest of imposing proportions. The party approaches cautiously, their torches flickering in the semi-darkness, revealing intricate carvings on the chest's surface depicting scenes of ancient rituals, celestial alignments, and strange creatures."
+ lifestyle_event_chains.45.a: "Open the chest."
+ lifestyle_event_chains.45.b: "Somethings are better left undisturbed"
 
- lifestyle_event_chains.46.t: "TODO"
- lifestyle_event_chains.46.desc: "TODO"
- lifestyle_event_chains.46.a: "TODO"
+ lifestyle_event_chains.46.t: "Ancient Treasure: Trapped"
+ lifestyle_event_chains.46.desc: "[ROOT.GetCountry.GetRuler.GetPraenomen]'s servants cautiously pry the lid open, revealing the mysteries concealed within. The chest creaks open, revealing a sudden burst of blinding light that momentarily blinds the onlookers. As their eyes adjust, they behold an extraordinary sight: a treasure trove of artifacts, jewels, and relics that glitter with an otherworldly radiance. However, their momentary awe is shattered as a deafening roar echoes from the cavern's mouth, reverberating through the subterranean chamber. The ground beneath their feet trembles as rocks and debris cascade down, sealing the entrance they had just passed through. The cave has collapsed, trapping them outside with no means of return. In the chaotic aftermath, a stalactite, shaken loose by the collapsing cavern, plummets from above, grazing [ROOT.GetCountry.GetRuler.GetPraenomen]'s thigh, leaving a deep and painful gash. As [ROOT.GetCountry.GetRuler.GetPraenomen]'s servants tends to their wounded [ROOT.GetCountry.GetRuler.GetRulerTitle], the extent of the injury becomes apparent. The wound, while not life-threatening, requires immediate attention."
+ lifestyle_event_chains.46.a: "We must return to [ROOT.GetCountry.GetCapital.GetName] at once!"
 
- lifestyle_event_chains.47.t: "TODO"
- lifestyle_event_chains.47.desc: "TODO"
- lifestyle_event_chains.47.a: "TODO"
+ lifestyle_event_chains.47.t: "Ancient Treasure: Isle of Atlas"
+ lifestyle_event_chains.47.desc: "[ROOT.GetCountry.GetRuler.GetPraenomen]'s servants cautiously pry the lid open, revealing the mysteries concealed within. The chest creaks open, revealing a sudden burst of blinding light that momentarily blinds the onlookers. As their eyes adjust, they behold an extraordinary sight: a treasure trove of artifacts, jewels, and relics that glitter with an otherworldly radiance. As [ROOT.GetCountry.GetRuler.GetPraenomen] marvels at the treasures within the enchanted chest, [ROOT.GetCountry.GetRuler.GetSheHe] makes a remarkable discovery: an ancient bronze map intricately engraved with mysterious symbols and depictions of an unknown island. The carvings depict an archipelago surrounded by vast oceans, and at its center. While most of the orichalcum is illegible, [ROOT.GetCountry.GetRuler.GetPraenomen] can make out what appears to be the map's title, 'Periplus of the Isle of Atlas.'"
+ lifestyle_event_chains.47.a: "Perhaps we could find the land of these Atleans..."
 
- lifestyle_event_chains.48.t: "TODO"
- lifestyle_event_chains.48.desc: "TODO"
- lifestyle_event_chains.48.a: "TODO"
+ lifestyle_event_chains.48.t: "Ancient Treasure: Prehistoric Sword"
+ lifestyle_event_chains.48.desc: "[ROOT.GetCountry.GetRuler.GetPraenomen]'s servants cautiously pry the lid open, revealing the mysteries concealed within. The chest creaks open, revealing a sudden burst of blinding light that momentarily blinds the onlookers. As their eyes adjust, they behold an extraordinary sight: a treasure trove of artifacts, jewels, and relics that glitter with an otherworldly radiance. As [ROOT.GetCountry.GetRuler.GetPraenomen] marvels at the treasures within the enchanted chest, [ROOT.GetCountry.GetRuler.GetSheHe] makes a remarkable discovery: an sword the likes of which no man has seen in millennia. The sword's blade, forged from a lustrous bronze alloy, bears markings that suggest a craftsmanship dating back to a time long before recorded history. Enigmatic symbols etched along the blade hint at forgotten rituals and ancient tales lost to the ages. The remarkable weapon gleams softly in the ambient glow of the chamber, exuding an aura of otherworldly power."
+ lifestyle_event_chains.48.a: "This sword will become the symbol of the [ROOT.GetCountry.GetRuler.GetFamilyDisplayAdjective] dynasty!"
  
  #Treasures
  orichalcian_map_of_atlantis: "Orichalcian Map of Atlantis"
