Duel and mandate

--- a/localization/english/missions/xiongnu_missions_ti_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_ti_l_english.yml
@@ -63,6 +63,7 @@
 
  xiongnu_missions_01_task_19: "Warn Wusun"
  xiongnu_missions_01_task_19_DESC: "The piddling [GetCountry('WUS').GetName] tribe, a lesser cousin of our [GetCountry('YEZ').GetName] rivals, cannot be allowed to interfere in our relations with the other steppe tribes. Let us ensure they won't, through 'diplomatic' means."
+ xiongnu_missions_01_task_19_tt:0 "Challenge [GetCountry('WUS').GetRuler.GetName] to a duel with the character interaction."
 
  xiongnu_missions_01_task_20: "Rise of the New Chanyu"
  xiongnu_missions_01_task_20_DESC: "A new #T Chanyu#! will rise to create a legacy of conquest and terror that will echo through the millenia..."
