--- a/localization/english/FMO_l_english.yml
+++ b/localization/english/FMO_l_english.yml
@@ -1,27 +1,47 @@
 ﻿l_english:
   #Vanilla
   military_building:0 "Conscription Camp"
+  military_building_desc:0 ""
   commerce_building:0 "Commercial District"
+  commerce_building_desc:0 ""
   workshop_building:1 "Production District"
+  workshop_building_desc:0 ""
   aqueduct_building:0 "Sanitation Works"
+  aqueduct_building_desc:0 ""
   #Mod
   foundry_building:0 "Workshop"
   military_harbor_building:0 "Shipyard"
+  military_harbor_building_desc:0 ""
   trade_harbor_building:0 "Trade Harbor"
+  trade_harbor_building_desc:0 ""
   food_trader_building:0 "Farmer's Market"
+  food_trader_building_desc:0 ""
   shrine_building:0 "Shrine"
+  shrine_building_desc:0 ""
   tavern_building:0 "Tavern"
+  tavern_building_desc:0 ""
   nobles_building:0 "Noble District"
+  nobles_building_desc:0 ""
   citizen_building:0 "Citizen District"
+  citizen_building_desc:0 ""
   freemen_building:0 "Freemen District"
+  freemen_building_desc:0 ""
   slave_building:0 "Slave Trader"
+  slave_building_desc:0 ""
   hunting_camps:0 "Hunting Camps"
+  hunting_camps_desc:0 ""
   logging_camps:0 "Logging Camps"
+  logging_camps_desc:0 ""
   shipyards:0 "Shipyard"
+  shipyards_desc:0 ""
   sanctuary_building:0 "Sanctuary"
+  sanctuary_building_desc:0 ""
   villa_building:0 "Villa Estate"
-  arena_building:0 "Arena" #prospect
+  villa_building_desc:0 ""
+  arena_building:0 "Arena"
+  arena_building_desc:0 ""
   local_forum_building:0 "Colonia"
+  local_forum_building_desc:0 ""
 
  construct_happiness_buildings_TOOLTIP:0 "#t Construct Public Buildings#!"
  construct_happiness_buildings:0 "Construct Public Buildings"
@@ -37,19 +57,27 @@
 
  #Roma Invicta
 commons_building:0 "Town Commons"
+commons_building_desc:0 ""
 crafts_workshop_building:0 "Crafts Workshop"
-sacred_enclosure_building:0 "Sacred Enclosure"
+crafts_workshop_building_desc:0 ""
 reservoir_building:0 "Reservoir"
+reservoir_building_desc:0 ""
 council_of_elders_building:0 "Council of Elders"
+council_of_elders_building_desc:0 ""
 nomad_camp_building:0 "Nomad Camp"
+nomad_camp_building_desc:0 ""
 enclosure_building:0 "Enclosure"
+enclosure_building_desc:0 ""
 
 
 #New
 
 settlement_blacksmith:0 "Blacksmith"
+settlement_blacksmith_desc:0 ""
 settlement_entertainment_complex:0 "Entertainment Complex"
+settlement_entertainment_complex_desc:0 ""
 settlement_market:0 "Market"
+settlement_market_desc:0 ""
 
 
 
