--- a/localization/english/00_TODO_l_english.yml
+++ b/localization/english/00_TODO_l_english.yml
@@ -277,6 +277,11 @@
  10_POINT_PROVINCES_UNIFICATION_UI:0 "Actions that give 10 points:\n\n[Player.Custom('china_unify_8313_custom_loc')]\n[Player.Custom('china_unify_8504_custom_loc')]\n[Player.Custom('china_unify_8972_custom_loc')]\n[Player.Custom('china_unify_8446_custom_loc')]\n[Player.Custom('china_unify_8681_custom_loc')]\n[Player.Custom('china_unify_8742_custom_loc')]\n[Player.Custom('china_unify_8384_custom_loc')]\n[Player.Custom('china_unify_8379_custom_loc')]"
  5_POINT_PROVINCES_UNIFICATION_UI:0 "Actions that give 5 points:\n\n[Player.Custom('china_unify_ZHO_custom_loc')][Player.Custom('china_unify_WZO_custom_loc')][Player.Custom('china_unify_EZO_custom_loc')][Player.Custom('china_unify_8433_custom_loc')]\n[Player.Custom('china_unify_8533_custom_loc')]\n[Player.Custom('china_unify_8435_custom_loc')]\n[Player.Custom('china_unify_8344_custom_loc')]\n[Player.Custom('china_unify_8636_custom_loc')]\n[Player.Custom('china_unify_8686_custom_loc')]\n[Player.Custom('china_unify_8488_custom_loc')]\n[Player.Custom('china_unify_8693_custom_loc')]\n[Player.Custom('china_unify_8553_custom_loc')]\n[Player.Custom('china_unify_8510_custom_loc')]\n[Player.Custom('china_unify_8477_custom_loc')]\n[Player.Custom('china_unify_8408_custom_loc')]\n[Player.Custom('china_unify_8344_custom_loc')]\n[Player.Custom('china_unify_8527_custom_loc')]\n[Player.Custom('china_unify_8997_custom_loc')]\n[Player.Custom('china_unify_9006_custom_loc')]\n[Player.Custom('china_unify_9651_custom_loc')]\n[Player.Custom('china_unify_9049_custom_loc')]"
 
+ #tooltips
+ add_5_mandate: "Our #E Harmony#! will increase by #G 5#!."
+ add_40_mandate: "Our #E Harmony#! will increase by #G 40#!."
+ subtract_5_mandate: "Our #E Harmony#! will decrease by #R 5#!."
+
  # End generated
 
  aos_terrain_yunmeng_modifier:0 "Yunmeng"
@@ -1374,3 +1379,4 @@
  NANYUE_ADJECTIVE: "Nanyuan"
  form_nanyue: "Form Nanyue"
  form_nanyue_desc: "There are many southern Yue peoples hugging the shore, however, because of their growing fortune, they are constantly being eyed by the Central Plains empires, who just see them as mere vassals. It is time to unite them and lead them to battles against these foreigners."
+ 
